完成剧情模块

--- a/RunCmdByPlayer.html
+++ b/RunCmdByPlayer.html
@@ -30,6 +30,8 @@
                 <span class="property-type">arry</span>
             </dt>
             <dd> 包含:cmd(命令),player(玩家uid) </dd>
+            <dd> 以玩家身份执行命令 </dd>
+            <dd> Execute commands as a player </dd>
         </dl>
     <h3>输出</h3>
     <dl class="message-properties">
