--- a/ChangePosition.html
+++ b/ChangePosition.html
@@ -24,26 +24,38 @@
 </script>
 
 <script type="text/x-red" data-help-name="ChangePosition">
-    <p>传送</p>
-    <p>transmit</p>
+    <p>传送到指定场景坐标</p>
+    <p>Transmit to the designated scene coordinates</p>
 
     <h3>输入</h3>
         <dl class="message-properties">
-            <dt>数组
-                <span class="property-type">any</span>
+            <dt>msg.payload.scene
+                <span class="property-type">num</span>
             </dt>
-            <dd> 包含:X,Y,Z,scene(场景ID),player(玩家uid)</dd>
-            <dd> X、Y、Z为float型,scene(场景ID)为int型</dd>
-            <dd> 传送到指定场景坐标 </dd>
-            <dd> Coordinate radius information </dd>
+            <dd> 场景ID</dd>
+            <dt>msg.payload.X
+                <span class="property-type">num</span>
+            </dt>
+            <dd> X坐标 </dd>
+            <dt>msg.payload.Y
+                <span class="property-type">num</span>
+            </dt>
+            <dd> Y坐标 </dd>
+            <dt>msg.payload.Z
+                <span class="property-type">num</span>
+            </dt>
+            <dd> Z坐标 </dd>
+            <dt>msg.payload.player
+                <span class="property-type">num</span>
+            </dt>
+            <dd> 玩家UID </dd>
         </dl>
 
     <h3>输出</h3>
         <dl class="message-properties">
-            <dt>操作结果
+            <dt>msg.payload.result
                 <span class="property-type">bool</span>
             </dt>
-            <dd> 输出为true时表示创建完成 </dd>
-            <dd> When the output is true, the creation is completed </dd>
+            <dd> 为true时表示传送成功 </dd>
         </dl>
 </script>
