--- a/CreateEntity.html
+++ b/CreateEntity.html
@@ -29,22 +29,30 @@
 
     <h3>输入</h3>
         <dl class="message-properties">
-            <dt>数组
-                <span class="property-type">any</span>
+            <dt>msg.payload.Entity_id
+                <span class="property-type">num</span>
             </dt>
-            <dd> 包含:id(实体ID),amount(数量),level(等级)</dd>
-            <dd> 均为int型</dd>
-            <dd> 要创建实体的信息 </dd>
-            <dd> Coordinate radius information </dd>
+            <dd> 实体ID</dd>
+            <dt>msg.payload.amount
+                <span class="property-type">num</span>
+            </dt>
+            <dd> 数量 </dd>
+            <dt>msg.payload.level
+                <span class="property-type">num</span>
+            </dt>
+            <dd> 等级 </dd>
+            <dt>msg.payload.player
+                <span class="property-type">num</span>
+            </dt>
+            <dd> 玩家UID </dd>
         </dl>
 
     <h3>输出</h3>
         <dl class="message-properties">
-            <dt>实体唯一ID
-                <span class="property-type">int</span>
+            <dt>msg.payload.Entity_uuid
+                <span class="property-type">num</span>
             </dt>
-            <dd> (每添加一个触发一次)</dd>
+            <dd> 实体唯一UUID </dd>
             <dd> 在服务器中改实体的唯一身份标识id,用于监测实体变化输入</dd>
-            <dd> Change the unique ID of the entity in the server to monitor the entity change input </dd>
         </dl>
 </script>
