--- a/GetPlayerBirthday.html
+++ b/GetPlayerBirthday.html
@@ -28,7 +28,7 @@
     <h3>输入</h3>
         <dl class="message-properties">
             <dt>msg.payload.player
-                <span class="property-type">num</span>
+                <span class="property-type">String</span>
             </dt>
             <dd> 玩家UID </dd>
         </dl>
