--- a/CreateEntity.html
+++ b/CreateEntity.html
@@ -29,22 +29,30 @@
 
     <h3>输入</h3>
         <dl class="message-properties">
-            <dt>msg.payload.Entity_id
-                <span class="property-type">num</span>
-            </dt>
-            <dd> 实体ID</dd>
-            <dt>msg.payload.amount
-                <span class="property-type">num</span>
-            </dt>
-            <dd> 数量 </dd>
-            <dt>msg.payload.level
-                <span class="property-type">num</span>
-            </dt>
-            <dd> 等级 </dd>
-            <dt>msg.payload.player
-                <span class="property-type">num</span>
-            </dt>
-            <dd> 玩家UID </dd>
+            <dl class="message-properties">
+                <dt>msg.payload.Entity_id
+                    <span class="property-type">num</span>
+                </dt>
+                <dd> 实体ID</dd>
+            </dl>
+            <dl class="message-properties">
+                <dt>msg.payload.amount
+                    <span class="property-type">num</span>
+                </dt>
+                <dd> 数量 </dd>
+            </dl>
+            <dl class="message-properties">
+                <dt>msg.payload.level
+                    <span class="property-type">num</span>
+                </dt>
+                <dd> 等级 </dd>
+            </dl>
+            <dl class="message-properties">
+                <dt>msg.payload.player
+                    <span class="property-type">String</span>
+                </dt>
+                <dd> 玩家UID </dd>
+            </dl>
         </dl>
 
     <h3>输出</h3>
