--- a/OnPosition.html
+++ b/OnPosition.html
@@ -58,6 +58,13 @@
             </dt>
             <dd> Z坐标 </dd>
         </dl>
+        <dl class="message-properties">
+            <dt>msg.payload.player
+                <span class="property-type">String</span>
+            </dt>
+            <dd> 玩家UID (可选)</dd>
+            <dd> 如果添加玩家UID,则只有该玩家进入范围时会触发,否则任何玩家进入范围都会触发</dd>
+        </dl>
 
     <h3>输出</h3>
         <dl class="message-properties">
