修改了目录结构，修复SSL证书问题，优化节点界面，优化解释。

--- a/node/Event/OnKillEntity.html
+++ b/node/Event/OnKillEntity.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('OnKillEntity', {
         category: 'Grasscutters',
-        color: '#a6bbcf',
+        color: '#a6cf9d',
         defaults: {
             server: { value: "", type: "remote-server" },
         },
@@ -25,7 +25,7 @@
 
 <script type="text/x-red" data-help-name="OnKillEntity">
     
-    <p>实体死亡事件</p>
+    <p>实体死亡触发</p>
     <p>Entity deaths</p>
     
         <h3>输入</h3>
