--- a/node/Event/OnPosition.html
+++ b/node/Event/OnPosition.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('OnPosition', {
         category: 'Grasscutters',
-        color: '#a6bbcf',
+        color: '#a6cf9d',
         defaults: {
             server: { value: "", type: "remote-server" },
         },
