--- a/node/RunCommand.html
+++ b/node/RunCommand.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('RunCommand', {
         category: 'Grasscutters',
-        color: '#a6bbcf',
+        color: '#cfb5b2',
         defaults: {
             server: {value:"", type:"remote-server"},
         },
