--- a/node/ConsoleLog.html
+++ b/node/ConsoleLog.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('ConsoleLog', {
         category: 'Grasscutters',
-        color: '#a6bbcf',
+        color: '#cfb5b2',
         defaults: {
             server: {value:"", type:"remote-server"},
         },
